// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropButton closes 1`] = `
<button
  class="StyledButton-gXzblK fhiEMm"
  aria-label="Open Drop"
  label="Dropper"
  type="button"
>
  <span
    class="StyledButton__StyledLabel-XZHBZ kthNMI"
  >
    Dropper
  </span>
</button>
`;

exports[`DropButton closes 2`] = `
<div
  id="drop-contents"
>
  drop contents
</div>
`;

exports[`DropButton closes 3`] = `
"@media only screen and (min-width:700px) {
  .fhiEMm {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .jArdLz {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`DropButton mounts 1`] = `
<button
  class="StyledButton-gXzblK fhiEMm"
  aria-label="Open Drop"
  type="button"
/>
`;

exports[`DropButton mounts 2`] = `
<div
  id="drop-contents"
>
  drop contents
</div>
`;

exports[`DropButton mounts 3`] = `
"@media only screen and (min-width:700px) {
  .fhiEMm {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`DropButton mounts 4`] = `
<button
  class="StyledButton-gXzblK fhiEMm"
  aria-label="Open Drop"
  type="button"
  tabindex="-1"
  id="test"
/>
`;

exports[`DropButton mounts 5`] = `
<div
  id="drop-contents"
>
  drop contents
</div>
`;

exports[`DropButton mounts 6`] = `
"@media only screen and (min-width:700px) {
  .fhiEMm {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;
